实现最简单的3D渲染循环全过程

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./assets/css/style.css"/>
 </head>
 <body>
-    <canvas id="three-canvas"></canvas>
-    <script src="./main/main.js" type="module"></script>
+    <!-- <canvas id="three-canvas"></canvas>-->
+    <script src="./main/scene/index.js" type="module"></script>
 </body>
 </html>
