--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <!-- <canvas id="three-canvas"></canvas>-->
-    <script src="./main/scene/index.js" type="module"></script>
+    <script src="./main/index.js" type="module"></script>
 </body>
 </html>
