--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/style.css"/>
 </head>
-<body>
+<body id="c">
     <!-- <canvas id="three-canvas"></canvas>-->
     <script src="./main/index.js" type="module"></script>
 </body>
